# rust-audio

./: .gitignore  Cargo.toml
src/: async_mp3.rs  async_wav.rs  audio.rs  buffer.rs  config.rs  main.rs  mix.rs  mp3.rs  pipeline.rs  samples.rs  wav.rs
src/sample_processor/: mix.rs  single_sample_processor.rs
