[package]
name = "rustaudio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.95", features = ["derive"] }
serde_json = "1.0.95"
puremp3 = "0.1.0"
minimp3 = "0.5.1"
mp3lame-encoder = "0.1.1"
hound = "3.5.0"
pretty_assertions = "1.3.0"
