[package]
name = "rustaudio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.95", features = ["derive"] }
serde_json = "1.0.95"
puremp3 = "0.1.0"
minimp3 = { version = "0.5.1", features = ["async_tokio"] }
mp3lame-encoder = "0.1.1"
hound = "3.5.0"
pretty_assertions = "1.3.0"
futures-core = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.28"
async-stream = "0.3.5"
futures-util = "0.3.28"
tempfile = "3.5.0"
